program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -6079,9 +6079,9 @@ msgid "Either fix the error or remove the configuration before closing the prefe
 msgstr "Il faut soit corriger l'erreur, soit retirer la configuration avant de fermer la boîte de dialogue des préférences."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:923
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Either the file format or the audio codec is not supported."
-msgstr "Le découpage de pistes de ce type n'est pas pris en charge."
+msgstr "Le format de fichier ou le codec n'est pas pris en charge."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:334
 #, no-c-format
@@ -6286,9 +6286,9 @@ msgid "Error parsing the tags in '{0}': some mandatory elements are missing.\n"
 msgstr "Erreur à l'analyse des balises dans « {0} » : des éléments obligatoires manquent.\n"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:934
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Error playing audio"
-msgstr "Erreur en chargeant le fichier de paramètres"
+msgstr "Erreur lors de la lecture audio"
 
 #: src/mkvtoolnix-gui/info/tab.cpp:196
 #: src/mkvtoolnix-gui/util/kax_analyzer.cpp:80
@@ -8918,7 +8918,7 @@ msgstr "Aucune pièce jointe ne correspond à « {0} ».\n"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:931
 #, no-c-format
 msgid "No audio device is available for playback, or accessing it failed."
-msgstr ""
+msgstr "Aucun périphérique audio n'est disponible ou son accès a échoué."
 
 #: src/propedit/propedit.cpp:187
 #, no-c-format
@@ -11926,9 +11926,9 @@ msgid "The attachment ({0}) is too big ({1})."
 msgstr "La pièce jointe « {0} » a une taille trop grosse ({1})."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:920
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The audio file '%1' could not be played back."
-msgstr "Le fichier XML de balises « {0} » est illisible.\n"
+msgstr "Le fichier audio « %1 » n'a pas pu être lu."
 
 #: src/mkvtoolnix-gui/util/settings.cpp:296
 #, no-c-format
