--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (67.0.0-0~bunkus01) impish; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 10 Apr 2022 15:53:08 +0200
+
 mkvtoolnix (66.0.0-0~bunkus01) impish; urgency=low
 
   * New version.
