--- a/doc/man/po4a/po/es.po
+++ b/doc/man/po4a/po/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix 8.0.0\n"
 "POT-Creation-Date: 2022-03-28 19:05+0200\n"
-"PO-Revision-Date: 2022-02-12 15:04+0000\n"
-"Last-Translator: overdrive80 <lukillas.ole@gmail.com>\n"
+"PO-Revision-Date: 2016-02-03 20:53+0000\n"
+"Last-Translator: overdrive80 <lukillas.ole@gmail.com>, 2016-2022\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/es/)\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -37,10 +37,8 @@ msgstr "67.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2022-02-06"
 msgid "2022-03-13"
-msgstr "2022-02-06"
+msgstr "2022-03-13"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1602,10 +1600,8 @@ msgstr "Establece el código de lenguaje predefinido que será usado para todas 
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:133
-#, fuzzy
-#| msgid "The default language code is '<literal>und</literal>' for 'undefined'."
 msgid "The default language code is '<literal>und</literal>' for 'undetermined'."
-msgstr "El código del lenguaje predefinido es '<literal>und</literal>' para 'Indeterminado'. "
+msgstr "El código de idioma predefinido es '<literal>und</literal>' para 'indeterminado'."
 
 #. type: Content of: <refentry><refsect1><refsect2><title>
 #: doc/man/mkvmerge.xml:140
@@ -2045,10 +2041,8 @@ msgstr "Normalmente &mkvmerge; escribirá los nuevos elementos de idioma IETF BC
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:559
 #: doc/man/mkvpropedit.xml:402
-#, fuzzy
-#| msgid "<option>--ui-language</option> <parameter>code</parameter>"
 msgid "<option>--normalize-language-ietf</option> <parameter>mode</parameter>"
-msgstr "<option>--ui-language</option> <parameter>código</parameter>"
+msgstr "<option>--normalize-language-ietf</option> <parameter>modo</parameter>"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:562
@@ -2634,10 +2628,8 @@ msgstr "&mkvextract; puede ser utilizado para extraer los archivos adjuntos de u
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1163
 #: doc/man/mkvpropedit.xml:360
-#, fuzzy
-#| msgid "<option>--enable-durations</option>"
 msgid "<option>--enable-legacy-font-mime-types</option>"
-msgstr "<option>--enable-durations</option>"
+msgstr "<option>--enable-legacy-font-mime-types</option>"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1166
