program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -709,7 +709,7 @@ msgid ""
 msgstr ""
 "  --normalize-language-ietf <canonical|extlang|off>\n"
 "                            Normaliza todas las etiquetas de lenguaje IETF BCP 47 a\n"
-"                            su forma canónica o a sub-etiquetas de lenguaje extendido\n"
+"                            su forma canónica o a sub-etiquetas de idioma extendido\n"
 "                            o a ninguna (por defecto: forma canónica).\n"
 
 #: src/merge/mkvmerge.cpp:260
@@ -1975,7 +1975,7 @@ msgstr "&Expandir todo"
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:383
 #, no-c-format
 msgid "&Extended language subtag:"
-msgstr "Sub-&etiqueta de idioma extendido:"
+msgstr "Sub-&etiqueta de idioma extendida:"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:698
 #, no-c-format
@@ -2310,7 +2310,7 @@ msgstr "&Eliminar la edición o capítulo seleccionado"
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:391
 #, no-c-format
 msgid "&Replace with normalized form"
-msgstr ""
+msgstr "&Reemplazar con forma normalizada"
 
 #: src/mkvtoolnix-gui/header_editor/value_page.cpp:202
 #, no-c-format
@@ -2757,9 +2757,9 @@ msgstr "'{0}' no es un corte válido.\n"
 
 #: src/merge/mkvmerge.cpp:2105
 #: src/propedit/propedit_cli_parser.cpp:224
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "'{0}' is not a valid language normalization mode.\n"
-msgstr "'{0}' no es un código de idioma ISO 639-2."
+msgstr "'{0}' no es un modo válido de normalización de idioma.\n"
 
 #: src/merge/mkvmerge.cpp:1528
 #, no-c-format
@@ -3474,9 +3474,9 @@ msgid "Add new ed&ition after"
 msgstr "Añadir nueva ed&ición después"
 
 #: src/mkvtoolnix-gui/main_window/prefs_language_shortcut_dialog.cpp:28
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Add new language shortcut"
-msgstr "Atajos de idioma"
+msgstr "Añadir nuevo atajo de teclado de idioma"
 
 #: src/propedit/propedit_cli_parser.cpp:255
 #, no-c-format
@@ -3793,12 +3793,12 @@ msgstr "Siempre preguntar al usuario"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:179
 #, no-c-format
 msgid "Always automatically replace with canonical form"
-msgstr ""
+msgstr "Siempre reemplazar con la forma canónica automáticamente"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:182
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Always automatically replace with extended language subtags form"
-msgstr "El idioma de etiqueta es correcto."
+msgstr "Siempre reemplazar con la forma de sub-etiquetas de idioma extendido automáticamente"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2189
 #, no-c-format
@@ -4446,7 +4446,7 @@ msgstr "No se puede escribir la pista {0} con la ID de códec '{1}' en el archiv
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:177
 #, no-c-format
 msgid "Canonical form"
-msgstr ""
+msgstr "Forma canónica"
 
 #: src/common/kax_info.cpp:1333
 #: src/common/kax_info.cpp:1337
@@ -6107,9 +6107,9 @@ msgid "Edit language"
 msgstr "Editar idioma"
 
 #: src/mkvtoolnix-gui/main_window/prefs_language_shortcut_dialog.cpp:28
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Edit language shortcut"
-msgstr "Atajos de idioma"
+msgstr "Editar atajo de teclado de idioma"
 
 #: src/propedit/propedit_cli_parser.cpp:278
 #, no-c-format
@@ -6155,9 +6155,9 @@ msgid "Either fix the error or remove the configuration before closing the prefe
 msgstr "Corrija el error o elimine la configuración antes de cerrar el cuadro de diálogo de las preferencias."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:923
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Either the file format or the audio codec is not supported."
-msgstr "No se admite la división de pistas de este tipo."
+msgstr "No se admite el formato de archivo o el códec de audio."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:334
 #, no-c-format
@@ -6362,9 +6362,9 @@ msgid "Error parsing the tags in '{0}': some mandatory elements are missing.\n"
 msgstr "Error analizando las etiquetas en '{0}': algunos elementos obligatorios están ausentes.\n"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:934
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Error playing audio"
-msgstr "Error cargando ajustes del archivo"
+msgstr "Error al reproducir audio"
 
 #: src/mkvtoolnix-gui/info/tab.cpp:196
 #: src/mkvtoolnix-gui/util/kax_analyzer.cpp:80
@@ -6543,14 +6543,14 @@ msgid "Exports the chapter information in the simple format used in OGM tools (C
 msgstr "Exporta la información del capítulo en un formato simple usado en las herramientas ODM (CHAPTER01=... CHAPTER01NAME=...)."
 
 #: src/mkvtoolnix-gui/util/language_display_widget.cpp:215
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Extended language subtag"
-msgstr "Subetiquetas extendidas"
+msgstr "Sub-etiqueta de idioma extendida"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:180
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Extended language subtags form"
-msgstr "Subetiquetas extendidas"
+msgstr "Forma de sub-etiquetas de idioma extendido"
 
 #: src/common/bcp47.cpp:476
 #, no-c-format
@@ -7206,9 +7206,9 @@ msgid "ID"
 msgstr "ID"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2108
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "IETF BCP 47 &normalization mode:"
-msgstr "&Modo de edición de idioma IETF BCP 47 predefinido:"
+msgstr "Modo de &normalización IETF BCP 47:"
 
 #: src/common/iso639.cpp:43
 #, no-c-format
@@ -7704,9 +7704,9 @@ msgid "Information"
 msgstr "Información"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:388
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Information & Warnings:"
-msgstr "Información"
+msgstr "Información y advertencias:"
 
 #: src/common/bitvalue.cpp:76
 #, no-c-format
@@ -8996,7 +8996,7 @@ msgstr "Ningún archivo adjunto coincide con la especificación '{0}'.\n"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:931
 #, no-c-format
 msgid "No audio device is available for playback, or accessing it failed."
-msgstr ""
+msgstr "No hay disponible ningún dispositivo de audio para la reproducción, o el acceso ha fallado. "
 
 #: src/propedit/propedit.cpp:187
 #, no-c-format
@@ -9186,7 +9186,7 @@ msgstr "Prioridad normal"
 #: src/propedit/propedit_cli_parser.cpp:272
 #, no-c-format
 msgid "Normalize all IETF BCP 47 language tags of changed elements to either their canonical form (mode 'canonical'), their extended language subtags form (mode 'extlang') or not at all (mode 'off')"
-msgstr ""
+msgstr "Normalizar todas las etiquetas de lenguaje IETF BCP 47 de los elementos modificados a su forma canónica (modo 'canonical'), a su forma de sub-etiquetas de idioma extendido (modo 'extlang') o nada (modo 'off')"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:313
 #, no-c-format
@@ -10490,12 +10490,12 @@ msgstr "Reemplazar adjunto con un nuevo archivo y &generar el nombre && tipo MIM
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:178
 #, no-c-format
 msgid "Replace with canonical form once"
-msgstr ""
+msgstr "Reemplazar una vez con su forma canónica"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:181
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Replace with extended language subtags form once"
-msgstr "El idioma de etiqueta es correcto."
+msgstr "Reemplazar una vez con la forma de sub-etiquetas de idioma extendido"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:721
 #, no-c-format
@@ -11047,7 +11047,7 @@ msgstr "Establecer el idioma en los nombres de los capítulos:"
 #: src/propedit/propedit_cli_parser.cpp:256
 #, no-c-format
 msgid "Set the charset to use when reading chapter files using the simple chapter format"
-msgstr ""
+msgstr "Establecer un conjunto de caracteres para usar cuando se lean los archivos de capitulo usando el formato básico de capítulos"
 
 #: src/propedit/propedit_cli_parser.cpp:266
 #, no-c-format
@@ -12005,9 +12005,9 @@ msgid "The attachment ({0}) is too big ({1})."
 msgstr "El adjunto ({0}) es demasiado grande ({1})."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:920
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The audio file '%1' could not be played back."
-msgstr "El archivo de etiqueta XML '{0}' no fue posible leer.\n"
+msgstr "No se pudo reproducir el archivo de audio '%1'."
 
 #: src/mkvtoolnix-gui/util/settings.cpp:296
 #, no-c-format
@@ -12023,7 +12023,7 @@ msgstr "La sincronización entre el audio/vídeo puede haberse perdido."
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:487
 #, no-c-format
 msgid "The canonical form does use a suitable prefix."
-msgstr ""
+msgstr "La forma canónica usa un adecuado prefijo."
 
 #: src/propedit/propedit.cpp:169
 #, no-c-format
@@ -12099,17 +12099,17 @@ msgstr "La cabecera del archivo de corrección no fue posible leer correctamente
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:501
 #, no-c-format
 msgid "The corresponding canonical & extended language subtags forms are: %1."
-msgstr ""
+msgstr "Las formas correspondientes de sub-etiquetas canónicas y extendidas de idioma son: %1."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:506
 #, no-c-format
 msgid "The corresponding canonical form is: %1."
-msgstr ""
+msgstr "La correspondiente forma canónica es: %1."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:511
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The corresponding extended language subtags form is: %1."
-msgstr "El idioma de etiqueta es correcto."
+msgstr "La correspondiente forma de sub-etiquetas de idioma extendido es: %1."
 
 #: src/merge/output_control.cpp:1627
 #, no-c-format
@@ -12278,9 +12278,9 @@ msgid "The error message was:"
 msgstr "El mensaje de error fue:"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:451
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The extended language subtag '%1' is deprecated."
-msgstr "El idioma de etiqueta es correcto."
+msgstr "La sub-etiqueta de idioma extendido '%1' está en desuso."
 
 #: src/common/bcp47.cpp:448
 #, no-c-format
@@ -12288,9 +12288,9 @@ msgid "The extended language subtag '{}' must only be used with one of the follo
 msgstr "La subetiqueta de idioma extendida '{}' sólo se debe usar con uno de los siguientes prefijos: {}."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:490
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The extended language subtags form does use a suitable prefix."
-msgstr "El idioma de etiqueta es correcto."
+msgstr "La forma de sub-etiquetas de idioma extendido hace uso de un adecuado prefijo."
 
 #: src/output/p_mpeg4_p2.cpp:360
 #, no-c-format
@@ -12720,9 +12720,9 @@ msgid "The job has been added to the job queue."
 msgstr "La tarea ha sido añadida a la lista de tareas."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:446
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The language '%1' is deprecated."
-msgstr "El idioma de etiqueta es correcto."
+msgstr "El idioma '%1' está en desuso."
 
 #: src/input/r_usf.cpp:106
 #, no-c-format
@@ -13053,9 +13053,9 @@ msgid "The recognized format is 'YYYY-mm-ddTHH:MM:SS+zz:zz': the year, month, da
 msgstr "El formato reconocido es 'YYYY-mm-ddTHH:MM:SS+zz:zz': año, mes, día, letra 'T', horas, minutos, segundos y la diferencia de la zona horaria UTC; por ejemplo: 2017-03-28T17:28:00-02:00."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:466
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The region '%1' is deprecated."
-msgstr "El archivo '%1' ya existe."
+msgstr "La región '%1' está en desuso."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:223
 #, no-c-format
@@ -13083,14 +13083,14 @@ msgid "The sample rate of the two audio tracks is different: {0} and {1}"
 msgstr "La frecuencia de muestreo de dos pistas de audio es diferente: {0} y {1}"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:456
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The script '%1' is deprecated."
-msgstr "El archivo '%1' ya existe."
+msgstr "El script '%1' está en desuso."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:460
 #, no-c-format
 msgid "The script '%1' should not be used for the language '%2' as it is the script the overwhelming majority of documents for this language is written in."
-msgstr ""
+msgstr "El script '%1' no debería ser usado para el idioma '%2', ya que es el script en el que se escriben la gran mayoría de los documentos para ese idioma."
 
 #: src/extract/extract_cli_parser.cpp:91
 #, no-c-format
@@ -13392,7 +13392,7 @@ msgstr "El valor '{}' no es un código numérico de país UN M.49 válido."
 #: src/common/bcp47.cpp:301
 #, no-c-format
 msgid "The value '{}' is not part of the IANA Language Subtag Registry for extended language subtags."
-msgstr "El valor '{}' no forma parte del Registro de Subetiquetas de Idioma IANA para etiquetas de idioma extendidas."
+msgstr "El valor '{}' no forma parte del Registro de Subetiquetas de Idioma IANA para etiquetas de idioma extendido."
 
 #: src/common/bcp47.cpp:316
 #, no-c-format
@@ -13433,19 +13433,19 @@ msgid "The values will be available for easy selection in the multiplexer."
 msgstr "Los valores estarán disponibles para seleccionarlos en el multiplexador."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:472
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The variant '%1' is deprecated."
-msgstr "El archivo '%1' ya existe."
+msgstr "La variante '%1' está en desuso."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:483
 #, no-c-format
 msgid "The variant '%1' is used with prefixes that aren't suited for it. Suitable prefixes are: %2."
-msgstr ""
+msgstr "La variante '%1' se usa con prefijos que no son aptos para ella. Los adecuados prefijos son: %2."
 
 #: src/common/bcp47.cpp:460
 #, no-c-format
 msgid "The variant '{}' occurs more than once."
-msgstr ""
+msgstr "La variante '{}' aparece más de una vez."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:751
 #, no-c-format
@@ -13702,7 +13702,7 @@ msgstr "Esto es útil para los casos de discos Blu-ray, en los que existen gran 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:495
 #, no-c-format
 msgid "This language tag is a grandfathered element only supported for historical reasons."
-msgstr ""
+msgstr "La etiqueta de idioma es un elemento adquirido que sólo se admite por motivos históricos."
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:100
 #, no-c-format
@@ -13988,9 +13988,9 @@ msgid "Track"
 msgstr "Pista"
 
 #: src/mkvtoolnix-gui/forms/main_window/prefs_language_shortcut_dialog.h:115
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Track &name (optional):"
-msgstr "&Nombre de pista:"
+msgstr "&Nombre de pista (opcional):"
 
 #: src/mkvtoolnix-gui/forms/header_editor/track_type_page.h:306
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:64
@@ -14029,9 +14029,9 @@ msgid "Track headers"
 msgstr "Cabecera de pista"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2112
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Track name"
-msgstr "&Nombre de pista:"
+msgstr "Nombre de pista"
 
 #: src/common/kax_element_names.cpp:188
 #: src/common/property_element.cpp:131
@@ -14425,7 +14425,7 @@ msgstr "Usar tipos MIME &heredados para adjuntos de fuentes."
 #: src/propedit/propedit_cli_parser.cpp:245
 #, no-c-format
 msgid "Use legacy font MIME types when adding new attachments or replacing existing ones"
-msgstr ""
+msgstr "Use tipos MIME de fuentes heredadas al agregar nuevos archivos adjuntos o reemplazar los existentes"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2175
 #, no-c-format
@@ -15382,7 +15382,7 @@ msgstr "botones"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:843
 #, no-c-format
 msgid "canonical form"
-msgstr ""
+msgstr "forma canónica"
 
 #: src/common/kax_info.cpp:635
 #, no-c-format
@@ -15475,9 +15475,9 @@ msgid "equirectangular"
 msgstr "equirectangular"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:844
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "extended language subtags form"
-msgstr "El idioma de etiqueta es correcto."
+msgstr "forma de sub-etiquetas de idioma extendido"
 
 #: src/merge/output_control.cpp:439
 #, no-c-format
@@ -15925,9 +15925,9 @@ msgid "no language selected"
 msgstr "ningún idioma seleccionado"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:842
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "no normalization"
-msgstr "Información"
+msgstr "sin normalización"
 
 #: src/common/kax_info.cpp:824
 #, no-c-format
