--- a/po/tr.po
+++ b/po/tr.po
@@ -6068,9 +6068,9 @@ msgid "Either fix the error or remove the configuration before closing the prefe
 msgstr "Tercihler iletisini kapatmadan önce ya hatayı düzeltin ya da yapılandırmayı kaldırın."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:923
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Either the file format or the audio codec is not supported."
-msgstr "Bu tür izleri bölme desteklenmiyor."
+msgstr "Ya dosya biçimi ya da ses kodeki desteklenmiyor."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:334
 #, no-c-format
@@ -6275,9 +6275,9 @@ msgid "Error parsing the tags in '{0}': some mandatory elements are missing.\n"
 msgstr "'{0}' içindeki etiketleri ayrıştırma hatası: bazı zorunlu öğeler eksik.\n"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:934
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Error playing audio"
-msgstr "Ayarlar dosyasını yükleme hatası"
+msgstr "Ses çalınırken hata"
 
 #: src/mkvtoolnix-gui/info/tab.cpp:196
 #: src/mkvtoolnix-gui/util/kax_analyzer.cpp:80
@@ -8907,7 +8907,7 @@ msgstr "Belirli {0} ile birlikte eşleşen ek yok.\n"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:931
 #, no-c-format
 msgid "No audio device is available for playback, or accessing it failed."
-msgstr ""
+msgstr "Kayıttan yürütme için kullanılabilir ses aygıtı yok veya bu aygıta erişim başarısız oldu."
 
 #: src/propedit/propedit.cpp:187
 #, no-c-format
@@ -11915,9 +11915,9 @@ msgid "The attachment ({0}) is too big ({1})."
 msgstr "Ek ({0}) çok büyük ({1})."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:920
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The audio file '%1' could not be played back."
-msgstr "XMl etiket dosyası '{0}' okunamadı.\n"
+msgstr "'%1' ses dosyası çalınamadı."
 
 #: src/mkvtoolnix-gui/util/settings.cpp:296
 #, no-c-format
